# ECB-Interest-Rate-Policy

./: .gitignore  Data_Preprocessing.py  README.md  app.py  model_training.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
.streamlit/: config.toml
Data/: Brent_Oil_Prices_data.csv  Fed_Fund_Rate_data.csv  GPR_data.csv  market_data.csv
Deploy/: setup.py
Processed_Data/: ecb_meeting_data.csv
Raw_Data/: ECBDFR.csv  German_bondyield_data.csv  macro_data.csv
docs/: DEPLOYMENT.md  DOCUMENTATION.md  Data_Preprocessing_Documentation.txt  ECB_Preprocessing_Documentation.txt  model_analysis.txt  streamlit_deployment_guide.md
models/: save_feature_names.py
models/crisis_aware/: crisis_aware_rf.pkl
models/smote/: smote_rf.pkl
models/standard/: standard_rf.pkl
models/two_stage/: binary_rf.pkl  direction_rf.pkl
models/weighted/: weighted_rf.pkl
results/: feature_importance.csv  final_model_comparison.csv  model_performance_summary.csv
shap_analysis/: shap_explainer.pkl  shap_values.npy
