[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecb-interest-rate-policy"
version = "1.0.0"
description = "ECB Interest Rate Policy Predictor Application"
requires-python = ">=3.9,<3.10"
dependencies = [
    "pandas==1.5.3",
    "numpy==1.24.3",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "scikit-learn==1.3.0",
    "imbalanced-learn==0.11.0",
    "joblib==1.3.2",
    "shap==0.42.1",
    "xgboost==1.7.6",
    "openpyxl==3.1.2",
    "plotly==5.18.0",
    "typing-extensions==4.8.0",
    "tqdm==4.66.1",
    "ipykernel==6.25.2",
    "streamlit==1.30.0",
    "Pillow==10.0.0",
    "python-dateutil==2.8.2",
    "watchdog==3.0.0",
]

[tool.setuptools]
packages = ["ECB-Interest-Rate-Policy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.streamlit]
# Streamlit specific configuration
entrypoint = "app.py" 